flux/apps/keeb-pro/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keeb-pro
spec:
  selector:
    matchLabels:
      app: keeb-pro
  template:
    metadata:
      labels:
        app: keeb-pro
    spec:
      containers:
        - name: keeb-pro
          image: registry.gitlab.com/danielpower/keeb-pro:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 101 # NGINX default user ID
            runAsGroup: 101 # NGINX default group ID
            fsGroup: 101 # Set group ownership of mounted volumes
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 5000
