flux/apps/keeb-pro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keeb-pro
spec:
  selector:
    app: keeb-pro
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
